// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration with apollo-server alias with fragment works 1`] = `
request:1
   finished: true

+-- a:2
      finished: true

   +-- dos:3
         finished: true


`;

exports[`integration with apollo-server alias works 1`] = `
request:1
   finished: true

+-- a:2
      finished: true

   +-- uno:3
         finished: true

   +-- two:4
         finished: true


`;

exports[`integration with apollo-server correct span nesting 1`] = `
request:1
   finished: true

+-- a:2
      finished: true

   +-- one:3
         finished: true

   +-- two:4
         finished: true


`;

exports[`integration with apollo-server does not start a field resolver span if the parent field resolver was not traced 1`] = `
request:1
   finished: true

+-- b:2
      finished: true

   +-- four:3
         finished: true


`;

exports[`integration with apollo-server implements traces for arrays 1`] = `
request:1
   finished: true

+-- as:2
      finished: true

   +-- one:3
         finished: true

   +-- two:4
         finished: true

   +-- one:5
         finished: true

   +-- two:6
         finished: true

   +-- one:7
         finished: true

   +-- two:8
         finished: true


`;

exports[`integration with apollo-server onFieldResolve & onFieldResolveFinish 1`] = `
request:1
   finished: true

+-- a:2
      finished: true
      logs:
      1. {"onFieldResolve":"yes"}
      2. {"onFieldResolveFinish":"yes"}

   +-- one:3
         finished: true
         logs:
         1. {"onFieldResolve":"yes"}
         2. {"onFieldResolveFinish":"yes"}

   +-- two:4
         finished: true
         logs:
         1. {"onFieldResolve":"yes"}
         2. {"onFieldResolveFinish":"yes"}

+-- b:5
      finished: true
      logs:
      1. {"onFieldResolve":"yes"}
      2. {"onFieldResolveFinish":"yes"}

   +-- four:6
         finished: true
         logs:
         1. {"onFieldResolve":"yes"}
         2. {"onFieldResolveFinish":"yes"}


`;

exports[`integration with apollo-server onRequestResolve 1`] = `
request:1
   finished: true
   logs:
   1. {"onRequestResolve":"yes"}

+-- a:2
      finished: true

   +-- one:3
         finished: true

   +-- two:4
         finished: true

+-- b:5
      finished: true

   +-- four:6
         finished: true


`;

exports[`integration with apollo-server picks up external spans 1`] = `
external:-1
   finished: false

+-- request:1
      finished: true

   +-- a:2
         finished: true

      +-- one:3
            finished: true


`;
